projects_ground/nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ngnix-deployment
  labels:
    app: ngnix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ngnix
  template:
    metadata:
      labels:
        app: ngnix
    spec:
      containers:
      - name: ngnix
        image: nginx:latest
        ports:
        - containerPort: 80

---


apiVersion: v1
kind: Service
metadata:
  name: ngnix
spec:
  selector:
    app: ngnix
  ports:
  - name: nginxport
    port: 8082
    targetPort: 80
