projects_ground/nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: ngnix-ingress-controller
  namespace: default
spec:
  controller: k8s.io/ingress-nginx
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ngnix-ingress
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    ingressClassName: ngnix-ingress-controller
    rules: 
      - host: eml.sandbox.aws.teamwork.net
        http:
            paths:
              - path: /
                pathType: Prefix
                backend:
                    service:
                        name: ngnix
                        port:
                          number: 8082
